--- a/index (1).html
+++ b/index (1).html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Homepage</title>
+  <title>SunDrift - Home</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body>
   <header>
     <h1>Welcome to SunDrift</h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="energy.html">Energy</a>
     </nav>
   </header>
 
@@ -25,17 +26,18 @@
     <section class="calendar">
       <h2>Select a Date</h2>
       <input type="date" id="datePicker" />
+      <p id="selectedDateText"></p>
     </section>
 
     <section class="data-display">
       <h2>Current Conditions in India</h2>
-      <p><strong>Sunlight Intensity:</strong> <span id="sunlight">Loading...</span></p>
+      <p><strong>Sunlight:</strong> <span id="sunlight">Loading...</span></p>
       <p><strong>Wind Speed:</strong> <span id="wind">Loading...</span></p>
     </section>
-    
-    <section class="about">
-      <h3>About Me</h3>
-      <p>This is a website designed to help with renewable energy optimization.</p>
+
+    <section class="map-section">
+      <h2>Solar Intensity Map</h2>
+      <div id="map"></div>
     </section>
   </main>
 
@@ -43,6 +45,7 @@
     <p>&copy; 2025 Team Sec C Bois. All rights reserved.</p>
   </footer>
 
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
